# pyenvdoctor

./: .gitignore  README.md  pyenvdoctor-0.1.0-py3-none-any.whl  pyproject.toml  pyproject.toml.error_backup  setup_and_install.sh  setup_and_install.sh.bak  setup_and_install.sh.sha256
.github/workflows/: release.yml  tests.yml
docs/: QUICKSTART.md
src/pyenvdoctor/: __init__.py  fixer.py
src/pyenvdoctor.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/pyenvdoctor/ai/: fix_oracle.py  predictors.py  recommender.py
src/pyenvdoctor/analyzer/: dependency_analyzer.py
src/pyenvdoctor/cli/: commands.py  commands.py.backup2  enhanced_commands.py  output.py
src/pyenvdoctor/core/: config.py  models.py
src/pyenvdoctor/gamification/: manager.py
src/pyenvdoctor/remediation/: cleaner.py
src/pyenvdoctor/scanner/: base_scanner.py  pyenv_scanner.py  system_scanner.py
src/pyenvdoctor/security/: auditor.py  vulnerability_scanner.py
src/pyenvdoctor/utils/: history.py  logging.py  storage.py
tests/: run_tests.py
tests/unit/scanner/: test_system_scanner.py  test_system_scanner_comprehensive.py
