[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyenvdoctor"
version = "0.1.0"
dependencies = [
    "rich>=13.0.0",
    "inquirer>=3.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0"
]
