[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyenvdoctor"
version = "0.1.0"
description = "Python Environment Management Toolkit"
authors = [
    {name = "actuune", email = "actuune@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0.0",
    "inquirer>=3.0.0",
    "packaging>=20.9",
    "requests>=2.31.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "coverage>=7.0.0"
]
dev = [
    "ipython>=8.0.0",
    "flake8>=5.0.0"
]

[project.scripts]
pyenvdoctor = "pyenvdoctor.cli.commands:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=pyenvdoctor --cov-report=term-missing"

[tool.coverage.run]
source = ["pyenvdoctor"]
branch = true
