[project]
name = "pyenvdoctor"
version = "0.2.0"
description = "Advanced Python environment management with AI and gamification"
authors = [{name = "PyEnvDoctor Team", email = "dev@pyenvdoctor.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0.0",
    "inquirer>=3.0.0",
    "packaging>=20.9",
    "requests>=2.31.0",
    "docker>=6.0.0",
    "distro>=1.8.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-docker>=2.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]

ai = [
    "openai>=0.27.0",
    "langchain>=0.0.200",
]

[project.scripts]
pyenvdoctor = "pyenvdoctor.cli.enhanced_commands:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/pyenvdoctor --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
branch = true
